<resources>
    <string name="app_name">永子</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="username_lable">请输入用户名</string>
    <string name="password_lable">请输入密码</string>
    <string name="name_lable">请输入姓名</string>
    <string name="phone_lable">请输入手机</string>
    <string name="sure_text">确定</string>
    <string name="cancel_text">取消</string>
</resources>